# schemavzrd

./: Cargo.toml  README.md  schemavzrd.html
.github/workflows/: rust.yml
src/: main.rs
templates/: schemavzrd.html.tera
