[package]
name = "schemavzrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datavzrd = { git = "https://github.com/datavzrd/datavzrd.git", branch = "pub-spec" }
schemars = "0.8"
serde_json = "1.0.113"
tera = "1.19.1"
anyhow = "1.0.75"